# toaster-miner

./: .gitignore  .travis.yml  AUTHORS  Android.mk  Dockerfile  LICENSE  Makefile.am  README.md  build.sh  configure.ac  log  miner.h  mingw64.sh  toaster-miner.c  toasterminer-conf.json  toasterminer.1  toasterminer.nsi  toasterminer.sln  toasterminer.vcxproj  toasterminer.vcxproj.filters  util.c
algo/: cryptonight.c  cryptoupx.c
api/: index.php
asm/: aesb-x64.S  aesb-x86.S  sha2-arm.S  sha2-x64.S  sha2-x86.S
compat/: cpuminer-config.h
compat/bionic/: cpuminer-config.h
res/: cpuminer.rc  icon.rc
sha3/: mod_blakecoin.c
